Fix checkstyle warnings